Further avoided out of memory exceptions by updating the JobResult DAO (#372)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2099 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Contracts/3.2/HeuristicLab.Hive.Contracts-3.2.csproj
+++ b/sources/HeuristicLab.Hive.Contracts/3.2/HeuristicLab.Hive.Contracts-3.2.csproj
@@ -95,6 +95,7 @@
     <Compile Include="BusinessObjects\Job.cs" />
     <Compile Include="BusinessObjects\JobResult.cs" />
     <Compile Include="BusinessObjects\Resource.cs" />
+    <Compile Include="BusinessObjects\SerializedJobResult.cs" />
     <Compile Include="BusinessObjects\UpTimeStatistics.cs" />
     <Compile Include="BusinessObjects\Client.cs" />
     <Compile Include="BusinessObjects\ClientConfig.cs" />
