Extracted base class of SGAMain and OSGAMain (ticket #580)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2120 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.FixedOperators/3.2/HeuristicLab.FixedOperators-3.2.csproj
+++ b/sources/HeuristicLab.FixedOperators/3.2/HeuristicLab.FixedOperators-3.2.csproj
@@ -99,8 +99,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FixedGAMainBase.cs" />
     <Compile Include="FixedOperatorBase.cs" />
-    <Compile Include="FixedOSGA.cs" />
+    <Compile Include="FixedOSGAMain.cs" />
     <Compile Include="FixedSGAMain.cs" />
     <Compile Include="HeuristicLabFixedOperatorsPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
