Fixed issue related to the streaming of results (#680)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2122 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Hive.Client.Communication/3.2/app.config
+++ b/sources/HeuristicLab.Hive.Client.Communication/3.2/app.config
@@ -21,11 +21,11 @@
             </netTcpBinding>
         </bindings>
         <client>
-            <endpoint address="net.tcp://10.20.53.7:9000/HiveServer/ClientCommunicator"
+            <endpoint address="net.tcp://10.0.2.15:9000/HiveServer/ClientCommunicator"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IClientFacade"
                 contract="ServerService.IClientFacade" name="NetTcpBinding_IClientFacade">
                 <identity>
-                    <userPrincipalName value="mse08026@fhs-hagenberg.ac.at" />
+                    <userPrincipalName value="STEFAN-4710DBDB\Stefan" />
                 </identity>
             </endpoint>
         </client>
