Implemented #302 (Show variable names instead of var<index> in GP function trees).  * Added a new operator that chooses a random value from a list of possible values.  * Changed mutation operator for variables and differentials  * Changed internal linear representation of function trees to support different types for local data.
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2174 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Random/3.2/HeuristicLab.Random-3.2.csproj
+++ b/sources/HeuristicLab.Random/3.2/HeuristicLab.Random-3.2.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UniformItemChooser.cs" />
     <Compile Include="UniformRandomAdder.cs" />
     <Compile Include="NormalRandomAdder.cs" />
     <Compile Include="HeuristicLabRandomPlugin.cs" />
