* Added extension method `IsAlmost` to type double  * changed evaluation semantics of boolean operations in `HL3TreeEvaluator`
(#713)

git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2226 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
+++ b/sources/HeuristicLab.Modeling/3.2/HeuristicLab.Modeling-3.2.csproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClassificationProblemInjector.cs" />
+    <Compile Include="DoubleExtensions.cs" />
     <Compile Include="VariableImpactCalculatorBase.cs" />
     <Compile Include="VariableEvaluationImpactCalculator.cs" />
     <Compile Include="Model.cs" />
