--- a/sources/HeuristicLab.Common.Resources/3.2/HeuristicLab.Common.Resources.csproj
+++ b/sources/HeuristicLab.Common.Resources/3.2/HeuristicLab.Common.Resources.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HeuristicLab.Common.Resources</RootNamespace>
-    <AssemblyName>HeuristicLab.Common.Resources</AssemblyName>
+    <AssemblyName>HeuristicLab.Common.Resources-3.2</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
@@ -146,6 +146,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\NewFolderIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\HeuristicLab.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
