adapted !MainForm to create !DropDownButtons (ticket #716)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@2249 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.MainForm.Test/3.2/HeuristicLab.MainForm.Test-3.2.csproj
+++ b/sources/HeuristicLab.MainForm.Test/3.2/HeuristicLab.MainForm.Test-3.2.csproj
@@ -81,15 +81,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OpenMenuItem.cs" />
-    <Compile Include="SaveMenuItem.cs" />
+    <Compile Include="Actions\NewEditorAction.cs" />
+    <Compile Include="ButtonItems\NewEditorToolStripButtonItem.cs" />
+    <Compile Include="ButtonItems\NewFormToolStripButtonItem.cs" />
+    <Compile Include="ButtonItems\SaveToolStripButtonItem.cs" />
+    <Compile Include="ButtonItems\OpenToolStripButtonItem.cs" />
+    <Compile Include="MenuItems\NewFormToolStripMenuItem.cs" />
+    <Compile Include="MenuItems\NewEditorToolStripMenuItem.cs" />
+    <Compile Include="MenuItems\FileToolStripMenuItem.cs" />
+    <Compile Include="MenuItems\NewToolStripMenuItem.cs" />
+    <Compile Include="Actions\NewFormAction.cs" />
+    <Compile Include="Actions\OpenAction.cs" />
+    <Compile Include="MenuItems\OpenToolStripMenuItem.cs" />
+    <Compile Include="Actions\SaveAction.cs" />
+    <Compile Include="MenuItems\SaveToolStripMenuItem.cs" />
     <Compile Include="HeuristicLabMainFormTestApplication.cs" />
     <Compile Include="HeuristicLabMainFormTestPlugin.cs" />
     <Compile Include="ITestUserInterfaceItemProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewsMenuItem.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="ButtonItems\NewToolStripButtonItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="HeuristicLab.snk" />
